2020-11-26  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* fuzzing/utils.cc (class MagickState): Enable tracing of
	exception events in order to help discover the origin of errors.
	If too much output comes out, then this will be removed.

	* magick/render.c (ConvertPathToPolygon): Attempt to fix leak of
	'points' on memory allocation failure.

2020-11-25  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/render.c (ConvertPathToPolygon): Make sure not to leak
	points from added Edge.  Fixes oss-fuzz 27608 "Direct-leak in
	_MagickReallocateResourceLimitedMemory".
	(DrawDashPolygon): Place an aribrary limit on stroke dash polygon
	unit maximum length in order to avoid possibly rendering
	"forever".  Addresses oss-fuzz 24236 "Timeout in
	coder_MVG_fuzzer".

2020-11-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/render.c (DrawPolygonPrimitive): Try to minimize the
	impact of too many threads due to replicated data until such time
	as the data structures can be re-designed to directly support
	threading.

2020-11-21  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* www/Hg.rst: Describe how to clone the repository from
	SourceForge using the ssh protocol rather than https.

	* coders/ps.c (WritePSImage): Fix problem when writing PseudoClass
	image with a colormap larger than two entries as bilevel.
	Previous implementation was assuming that the colormap would only
	include two entries for a monochrome image, but many entries may
	exist in the colormap which were never used.  Fixes SourceForge
	issue #635 "gm convert failure from .pgm to .eps".

2020-11-20  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* fuzzing/utils.cc (class MagickState): Set DiskResource limit to
	zero so that pixel cache won't spill over to using temporary
	files.

2020-11-16  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* NEWS.txt: Update the news to the date November 16, 2020.

2020-11-15  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
