@@ -35,6 +35,18 @@
 <div class="document">
 
 
+<p>2020-11-26  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
+<blockquote>
+<ul class="simple">
+<li>coders/tiff.c (ReadTIFFImage): Improve RGBATiledMethod progress
+monitor so it reports more steps.</li>
+<li>fuzzing/utils.cc (class MagickState): Enable tracing of
+exception events in order to help discover the origin of errors.
+If too much output comes out, then this will be removed.</li>
+<li>magick/render.c (ConvertPathToPolygon): Attempt to fix leak of
+'points' on memory allocation failure.</li>
+</ul>
+</blockquote>
 <p>2020-11-25  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
